maze.lessons.maze.island.IslandMaze.scala.error
Escaper:2: error: Missing closing brace `}' assumed here
override def run() {
^Escaper:2: error: expected start of definition
override def run() {
         ^Escaper:10: error: expected class or object definition
def verif() {
^